--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
 						</div>
 					</section>
 
+					<!-- Five -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+						<div class="content">
+							<h2>Sweet Eats Bakery</h2>
+							<p>This project was built on HTML & CSS.</p>
+							<ul class="actions stacked">
+								<li><a href="https://codepen.io/tasIim/pen/aMjOgL" target="_blank"
+										class="button">View on CodePen</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/bakery-website.png" alt="preview of project" />
+						</div>
+					</section>
+
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
