Added new images and credits for photos

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/bakery-website.png" alt="preview of project" />
+							<img src="images/bakery-website.jpg" alt="preview of project" />
 						</div>
 					</section>
 
@@ -127,9 +127,9 @@
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 							<p>NYC Photo by <a href="https://unsplash.com/@alicekat?utm_medium=referral&utm_campaign=photographer-credit&utm_content=creditBadge" target="_blank">Alice Donovan Rouse</a> on Unsplash.</p>
+							<p>Cupcake Photo by <a href="https://www.pexels.com/@feelartfeelant" target="_blank">Acharaporn Kamornboonyarush</a> from Pexels.</p>
 						</div>
 					</footer>
-
 			</div>
 
 		<!-- Scripts -->
