--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 							<ul class="icons">
 								<li><a href="https://twitter.com/Taslimjs" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.instagram.com/taslim.js/" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/taslimy" class="icon style2 fa-github"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/taslimy" class="icon style2 fa-github"><span class="label">Github</span></a></li>
 								<li><a href="mailto:taslimer@gmail.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
